# lab08

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md  REPORT.md  main.cpp
.github/workflows/: blank.yml  ci.yml  cpack.yml  docker.yml  release.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
_build/formatter_ex/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/solver/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
cmake/Hunter/: config.cmake
formatter_ex/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
pkg/: CMakeLists.txt  lib.cpp  lib.hpp
pkg/cmake/: pkg.cmake
pkg/include/: pkg.hpp
pkg/src/: pkg.cpp
solver/: CMakeLists.txt  solver.cpp
solver_lib/: CMakeLists.txt  solver.cpp
